# arxiv-tracker-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Makefile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  setup.sh  start.sh
.claude/: settings.local.json
backend/: __init__.py  main.py  scheduler.py
backend/agents/: __init__.py  paper_agent.py  qa_agent.py  tools.py  topic_explorer.py
backend/api/: __init__.py  conversations.py  explore.py  interests.py  papers.py  recommendations.py  reports.py  system.py  websocket.py
backend/core/: __init__.py  config.py
backend/models/: __init__.py  database.py
backend/services/: __init__.py  arxiv_service.py  hybrid_retrieval_service.py  llm_factory.py  llm_service.py  pdf_service.py  rag_service.py  report_service.py  vector_store.py  vlm_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/app/: page.tsx
frontend/src/app/interests/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/papers/[id]/: page.tsx
frontend/src/app/recommendations/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: FetchModal.tsx  Layout.tsx  TopicExplorer.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
tests/: test_agent_search_scope.py  test_paper_workflow.py
